--- a/index.html
+++ b/index.html
@@ -2,34 +2,111 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>R4H1 GAMING ZONE</title>
+<title>R4H1 Gaming Zone</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/theme.css">
-<script src="js/router.js" defer></script>
+
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+
+*{margin:0;padding:0;box-sizing:border-box}
+
+body{
+  font-family:'Orbitron',sans-serif;
+  background:#000;
+  color:#00e5ff;
+  height:100vh;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.loader{
+  text-align:center;
+  animation:fadeOut 1s ease forwards;
+  animation-delay:2.5s;
+}
+
+.loader h1{
+  font-size:36px;
+  letter-spacing:4px;
+  margin-bottom:20px;
+}
+
+.spinner{
+  width:60px;
+  height:60px;
+  border:5px solid rgba(0,229,255,.3);
+  border-top:5px solid #00e5ff;
+  border-radius:50%;
+  animation:spin 1s linear infinite;
+  margin:auto;
+}
+
+@keyframes spin{
+  to{transform:rotate(360deg)}
+}
+
+@keyframes fadeOut{
+  to{opacity:0;visibility:hidden}
+}
+
+.main{
+  display:none;
+  text-align:center;
+}
+
+.main h1{
+  font-size:42px;
+  margin-bottom:30px;
+}
+
+.btn{
+  padding:14px 40px;
+  margin:10px;
+  font-family:'Orbitron';
+  font-size:16px;
+  border:2px solid #00e5ff;
+  background:transparent;
+  color:#00e5ff;
+  border-radius:30px;
+  cursor:pointer;
+  transition:.3s;
+}
+
+.btn:hover{
+  background:#00e5ff;
+  color:#000;
+}
+</style>
 </head>
 
 <body>
-<div id="loader">
+
+<div class="loader" id="loader">
   <h1>R4H1 GAMING ZONE</h1>
   <div class="spinner"></div>
 </div>
 
-<div id="home" class="hidden">
-  <h1 class="title">R4H1 GAMING ZONE</h1>
-  <button onclick="go('menu.html')">PLAY GAME</button>
-  <button onclick="goExternal()">DEVELOPER INFORMATION</button>
+<div class="main" id="main">
+  <h1>R4H1 GAMING ZONE</h1>
+  <button class="btn" onclick="goMenu()">PLAY GAME</button>
+  <button class="btn" onclick="devInfo()">DEVELOPER INFO</button>
 </div>
 
 <script>
-setTimeout(() => {
-  document.getElementById("loader").style.display = "none";
-  document.getElementById("home").classList.remove("hidden");
-  sessionStorage.setItem("entry", "true");
-}, 2500);
+setTimeout(()=>{
+  document.getElementById('loader').style.display="none";
+  document.getElementById('main').style.display="block";
+},3000);
 
-function goExternal(){
-  location.href="https://www.facebook.com/AdnanRahiOffcial";
+function goMenu(){
+  window.location.href = "menu.html";
+}
+
+function devInfo(){
+  window.location.href = "https://www.facebook.com/AdnanRahiOffcial";
 }
 </script>
+
 </body>
 </html>
